log
Sat 06 May 2023 04:03:39 AM UTC: 
 tests:  0|5
total_score: 0/70
4e058c2
Sat 06 May 2023 05:13:12 AM UTC: 
 sudoku.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:61:21: error: implicit declaration of function ‘addElement’ [-Werror=implicit-function-declaration]
   61 |                     addElement(list, new_node);
      |                     ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3b34a77
Sat 06 May 2023 05:15:03 AM UTC: 
 sudoku.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:21: error: implicit declaration of function ‘appent’ [-Werror=implicit-function-declaration]
   64 |                     appent(list, new_node);
      |                     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4c236ee
